refactor: #13 user 애그리거트를 ERD 기준 프로필/약관/포인트 테이블로 분리
users 단일 테이블에 통합돼 있던 자녀/보호자 프로필·약관 동의·포인트를 ERD대로 child_profiles, child_disabilities, guardian_profiles, user_interests, user_agreements 사이드 테이블로 분리한다. User는 위임 getter로 애그리거트 facade를 유지하고, 순수 필드 getter는 Lombok @Getter로 정리했다. 포인트는 guardian_profiles로 이동. 마이그레이션 SQL 2건 포함.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>